--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
 </head>
 
 <body>
+    <nav>
+        <!-- Your navigation links go here -->
+        <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
 
     <header>
         <h1>Jonathan Bijl</h1>
@@ -62,9 +70,11 @@
 
     <section>
         <h2>Skills</h2>
-        <p>
-
-        </p>
+        <ul>
+            <li>HTML5</li>
+            <li>CSS3</li>
+            <li>JavaScript</li>
+        </ul>>
     </section>
 
     <section>
