Working on portfolio

--- a/index.html
+++ b/index.html
@@ -28,21 +28,20 @@
 </head>
 
 <body>
-    <nav>
-        <!-- Your navigation links go here -->
-        <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
-
     <header>
+        <nav>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
         <h1>Jonathan Bijl</h1>
-        <p>Junior Web Developer</p>
+        <p class="typing-text">Junior Web Developer</p>
+        
     </header>
 
-    <section>
+    <section class="about">
         <h2>About Me</h2>
         <p>
             Junior web developer dedicated to crafting user-friendly and 
