--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jonathan Bijl - Portfolio</title>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
+    
     <meta name="description" content="Jonathan Bijl - Junior Web Developer Portfolio">
     <meta name="keywords" content="web development, portfolio, junior web developer, software engineer">
     <script type="application/ld+json">
@@ -31,13 +34,13 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#about">ABOUT</a></li>
+                <li><a href="#projects">PROJECTS</a></li>
+                <li><a href="#contact">CONTACT</a></li>
             </ul>
         </nav>
-        <h1>Jonathan Bijl</h1>
-        <p class="typing-text">Junior Web Developer</p>
+        <h1>JONATHAN BIJL</h1>
+        <p><span id="holder"></span><span class="blinking-cursor">|</span></p>
         
     </header>
 
@@ -48,17 +51,7 @@
             efficient websites. With proficiency in both front-end and back-end technologies, my mission is to translate clients' needs 
             into impactful digital solutions. I thrive on staying at the forefront of industry trends and best practices to ensure the 
             websites I build are not only contemporary but also highly functional.</p>
-    <section>
-        <h2>Why Choose Me?</h2>
-            <ul>
-            <li>Versatility: I bring a robust skill set covering both front-end and back-end technologies, allowing me to tackle projects 
-            comprehensively.</li>
-            <li>Innovation: Keeping abreast of the latest trends is a cornerstone of my approach. I integrate cutting-edge design principles 
-            and technologies to deliver modern and engaging web experiences.</li>
-            <li>Collaboration: Working seamlessly within a team is my forte. I believe in synergizing diverse skills to create web solutions
-            that resonate with both users and clients.</li>
-            </ul>
-    </section>
+
             <p>Let's Build Together
             I am excited about the prospect of contributing my skills to collaborative projects that push the boundaries of web 
             development. If you are looking for a developer who is not just adept but also committed to delivering excellence,
@@ -102,9 +95,8 @@
     </section>
 
     <footer>
-        <p>Contact me at: Jonathanabijl@gmail.com</p>
-        <p>Connect with me on <a href="https://linkedin.com/in/jonathanbijl/" target="_blank">LinkedIn</a></p>
-        <p>Connect with me on <a href="https://https://github.com/Bijl1/" target="_blank">GitHub</a></p>
+        <a href="https://linkedin.com/in/jonathanbijl/" target="_blank">LinkedIn</a>
+        <a href="https://https://github.com/Bijl1/" target="_blank">GitHub</a>
     </footer>
 
 </body>
