--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             "@type": "Person",
             "name": "Jonathan Bijl",
             "jobTitle": "Junior Web Developer",
-            "url": "your_portfolio_url",
+            "url": "https://jonathanbijl.com]",
             "sameAs": [
                 "https://linkedin.com/in/jonathanbijl/",
                 "https://github.com/Bijl1/"
@@ -35,6 +35,7 @@
         <nav>
             <ul>
                 <li><a href="#about">ABOUT</a></li>
+                <li><a href="#blog">BLOG</a></li>
                 <li><a href="#projects">PROJECTS</a></li>
                 <li><a href="#contact">CONTACT</a></li>
             </ul>
@@ -62,11 +63,11 @@
 
     <section>
         <h2>Skills</h2>
-        <ul>
+        <ul class="skills">
             <li>HTML5</li>
             <li>CSS3</li>
             <li>JavaScript</li>
-        </ul>>
+        </ul>
     </section>
 
     <section>
@@ -88,6 +89,13 @@
 
         <div class="project">
             <h3>Project 3: Project Name</h3>
+            <p>
+
+            </p>
+        </div>
+
+        <div class="project">
+            <h3>Project 4: Project Name</h3>
             <p>
 
             </p>
