--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-VkDs3IJ7P2HhOK5p94pA+hJ7jCTpM2kCk5RAeN5qWi26Wm8tNPD1zZ/JIf/+oXwIBH58pEKDKCY2gA/rw/Y+9g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://use.fontawesome.com/d1341f9b7a.js"></script>
     <meta name="description" content="Jonathan Bijl - Junior Web Developer Portfolio">
     <meta name="keywords" content="web development, portfolio, junior web developer, software engineer">
     <script type="application/ld+json">
@@ -103,8 +104,12 @@
     </section>
 
     <footer>
-        <a href="https://linkedin.com/in/jonathanbijl/" target="_blank">LinkedIn</a>
-        <a href="https://https://github.com/Bijl1/" target="_blank">GitHub</a>
+        <div class="box">
+            <ul>
+              <a href="https://www.linkedin.com/in/amygrogan/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+              <a href="https://github.com/Bijl1" target="_blank"><i class="fa fa-github-square" aria-hidden="true"></i></a>
+            </ul>
+          </div>
     </footer>
 
 </body>
