--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <body>
     <header>
-        <img src="https://contentstatic.techgig.com/thumb/msid-81571178,width-460,resizemode-4/How-to-become-a-full-stack-developer-in-2021.jpg" alt="Tech Picture">
+        <img src="https://static.pexels.com/photos/5412/water-blue-ocean.jpg" alt="Tech Picture">
         <nav>
             <ul>
                 <li><a href="#about">ABOUT</a></li>
@@ -40,20 +40,25 @@
         <h1>JONATHAN BIJL</h1>
         <p><span id="holder"></span><span class="blinking-cursor">|</span></p>
     </header>
+    <div class="whitecontainer">
+        <img src="https://media.istockphoto.com/id/1387999856/photo/abstract-white-background-with-connected-dots-and-lines-medical-background-background-for.webp?b=1&s=170667a&w=0&k=20&c=K3Rvxmoa8B0EjAsSlXI2W8PzTMWgsJUpeqqr0Df0K0U=" alt="Tech Picture">
 
-    <section class="second">
+    </div>
+
+
+    <section class="about">
         <h2>About Me</h2>
-        <p>Junior web developer dedicated to crafting user-friendly and 
+        <p>Web developer dedicated to crafting user-friendly and 
             efficient websites. With proficiency in both front-end and back-end technologies, my mission is to translate clients' needs 
             into impactful digital solutions. I thrive on staying at the forefront of industry trends and best practices to ensure the 
             websites I build are not only contemporary but also highly functional.</p>
-
             <p>Let's Build Together
             I am excited about the prospect of contributing my skills to collaborative projects that push the boundaries of web 
             development. If you are looking for a developer who is not just adept but also committed to delivering excellence,
             let's connect and explore the possibilities.
             Thank you for visiting my portfolio. Let's embark on a journey of creating web solutions that stand out!
         </p>
+    </section>
 
         <section class="skills">
             <h2>Skills</h2>
@@ -71,7 +76,7 @@
             <a href="https://github.com/Bijl1" target="_blank"><i class="fab fa-github"></i></a>
         </footer>
         
-    </section>
+    
 
 </body>
 
