--- a/index.html
+++ b/index.html
@@ -60,16 +60,21 @@
         </p>
     </section>
 
-        <section class="skills">
-            <h2>Skills</h2>
-            <ul>
-                <li>HTML5</li>
-                <li>CSS3</li>
-                <li>JavaScript</li>
-            </ul>
-        </section>
-        
-        <a href="https://" title="Download my resume" target="_blank">Download my resume</a>
+    <section class="skills">
+        <h2>Skills</h2>
+        <ul>
+            <li><i class="fab fa-html5"></i> HTML5</li>
+            <li><i class="fab fa-css3"></i> CSS3</li>
+            <li><i class="fab fa-js"></i> JavaScript</li>
+        </ul>
+    </section>
+
+
+
+    
+        <div>
+            <a href="https://" title="Download my resume" target="_blank">Download my resume</a>
+        </div>
 
         <footer>
             <a href="https://www.linkedin.com/in/jonathanbijl/" target="_blank"><i class="fab fa-linkedin"></i></a>
